Added the about info and reveal effects for all components

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Finlandica:wght@700&family=Gentium+Book+Plus:ital@1&family=Gulzar&family=Mingzat&family=Montserrat:ital,wght@0,400;0,900;1,900&family=Nunito+Sans:ital,wght@1,900&family=Open+Sans:wght@400;800&family=Pacifico&family=Roboto+Mono:ital,wght@1,600&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Finlandica:wght@700&family=Gentium+Book+Plus:ital@1&family=Gulzar&family=Mingzat&family=Montserrat:ital,wght@0,300;0,400;0,900;1,900&family=Nunito+Sans:ital,wght@1,900&family=Open+Sans:wght@400;800&family=Pacifico&family=Roboto+Mono:ital,wght@1,600&family=Roboto+Slab&family=Ubuntu&display=swap" rel="stylesheet">
 
     <link href="./styles.css" rel="stylesheet">
     <title>my website</title>
