--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Finlandica:wght@700&family=Gentium+Book+Plus:ital@1&family=Gulzar&family=Mingzat&family=Montserrat:ital,wght@0,300;0,400;0,900;1,900&family=Nunito+Sans:ital,wght@1,900&family=Open+Sans:wght@400;800&family=Pacifico&family=Roboto+Mono:ital,wght@1,600&family=Roboto+Slab&family=Ubuntu&display=swap" rel="stylesheet">
 
     <link href="./styles.css" rel="stylesheet">
-    <title>my website</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <title>Manav's Personal Website</title>
   </head>
   <body>
     <div id="root"></div>
